--- a/artyprod/templates/artyprod/home.html
+++ b/artyprod/templates/artyprod/home.html
@@ -52,7 +52,7 @@
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             margin-bottom: 30px;
-            background-color: #fff;
+            background-color: #D6EEEB;
             overflow: hidden;
             transition: all 0.3s ease-in-out;
           }
@@ -141,6 +141,7 @@
             color: #666;
             padding: 20px;
             border-bottom: 1px solid #f5f5f5;
+            background-color:#D6EEEB
           }
 
 
@@ -183,13 +184,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1 class=" mt-5 mb-4">Bienvenue sur le site de ArtyProd !</h1>
+      <h1 class=" mt-5 mb-4"style="padding:30px;color:rgb(204,153,255);font-family: italic;text-decoration:underline">Bienvenue sur le site de ArtyProd !</h1>
     </div>
   </div>
 
   <div class="row" id="projects">
     <div class="col-md-12">
-      <h2 class="mb-4">Nos projets les plus récents :</h2>
+      <h2 class="mb-4" style="color: #007bff">Nos projets les plus récents :</h2>
     </div>
   </div>
   <div class="row">
@@ -228,7 +229,7 @@
   
   <div class="row mt-5" id="services">
     <div class="col-md-12">
-      <h2 class="mb-4">Nos services :</h2>
+      <h2 class="mb-4" style="color: #007bff">Nos services :</h2>
     </div>
   </div>
 
@@ -249,7 +250,7 @@
 
   <div class="row" id="team">
     <div class="col-md-12">
-      <h2 class="mb-4">Les membres de notre équipe :</h2>
+      <h2 class="mb-4" style="color: #007bff">Les membres Inscrits :</h2>
     </div>
   </div>
   <form encrypte method='POST' class="post-form" >
