--- a/artyprod/templates/artyprod/login.html
+++ b/artyprod/templates/artyprod/login.html
@@ -1,7 +1,7 @@
 {% extends "artyprod/base.html" %}
 
 {% block content %}
-  <div class="container mt-5">
+  <div class="container mt-5" style="padding:10%">
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card">
@@ -17,7 +17,6 @@
       </div>
     </div>
   </div>
-
   <style>
     .card {
       border-radius: 15px;
