--- a/artyprod/templates/artyprod/personnel_create.html
+++ b/artyprod/templates/artyprod/personnel_create.html
@@ -32,8 +32,8 @@
       text-decoration:underline;
   }
 </style>
-  <div class="container mt-5">
-    <h1 >Nouveau membre</h1>
+  <div class="container mt-5" style="color: #007bff">
+    <h1 style="color: #007bff">Nouveau membre</h1>
     <form method="POST" enctype="multipart/form-data"  action="{% url 'personnel_create' %}" class="mt-5">
       {% csrf_token %}
       {{ form.as_p }}
