--- a/artyprod/templates/artyprod/project_create.html
+++ b/artyprod/templates/artyprod/project_create.html
@@ -34,7 +34,7 @@
       text-decoration:underline;
   }
 </style>
-  <div class="container mt-5">
+  <div class="container mt-5" style="color: #007bff">
     <h1 >Nouveau projet</h1>
     <form method="POST" action="{% url 'project_create' %}" class="mt-5">
       {% csrf_token %}
