--- a/artyprod/templates/artyprod/service.html
+++ b/artyprod/templates/artyprod/service.html
@@ -33,7 +33,7 @@
   }
 </style>
 
-  <div class="container mt-5">
+  <div class="container mt-5" style="color: #007bff">
     <h1>Ajouter un service</h1>
     <form method="POST" action="{% url 'service' %}">
       {% csrf_token %}
