--- a/artyprod/templates/artyprod/team_delete.html
+++ b/artyprod/templates/artyprod/team_delete.html
@@ -37,7 +37,7 @@
   }
 </style>
 
-<div class="delete-team"style ="margin-top:7%">
+<div class="delete-team"style ="margin-top:7%" style="color: #007bff">
   <h2>Supprimer l'équipe {{ team.name }}</h2>
   <p>Êtes-vous sûr de vouloir supprimer cette équipe ?</p>
   <form method="post">
