--- a/artyprod/templates/artyprod/team_detail.html
+++ b/artyprod/templates/artyprod/team_detail.html
@@ -64,7 +64,7 @@
   }
 </style>
 
-<div class="team-detail" style="margin-top:7%">
+<div class="team-detail" style="margin-top:7%" style="color: #007bff">
     <h1 style="color:blue ;font-weight:bold;text-decoration:underline;font-size:25px">Le nom de l'équipe:</h1>
     <div class="team">
       <h2 style="font-size:15px;font-weight:bold">{{ team.name }}</h2>
