--- a/artyprod/templates/artyprod/team_list.html
+++ b/artyprod/templates/artyprod/team_list.html
@@ -58,7 +58,7 @@
     }
   </style>
 
-  <div class="team-list"style =" margin-top:10%;">
+  <div class="team-list"style =" margin-top:10%;" style="color: #007bff">
     <h1>Liste des équipes</h1>
     {% if teams %}
       {% for team in teams %}
