--- a/artyprod/templates/artyprod/team_update.html
+++ b/artyprod/templates/artyprod/team_update.html
@@ -50,7 +50,7 @@
   }
 </style>
 
-<div class="team-update" style="margin-top:10%">
+<div class="team-update" style="margin-top:10%" style="color: #007bff">
   <h2>Modifier l'équipe {{ team.name }}</h2>
   <form method="post">
     {% csrf_token %}
